--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-.env
 log.txt
 info.txt
+
+ Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
