--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 log.txt
 info.txt
 
- Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+.idea/
+
 
 # Environments
 .env
